--- a/admin_dashboard/templates/dashboard1/dashboard.html
+++ b/admin_dashboard/templates/dashboard1/dashboard.html
@@ -3,6 +3,14 @@
 {% block body %}
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+    >
+    <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -81,12 +89,12 @@
                     <div class="full counter_section margin_bottom_30">
                         <div class="couter_icon">
                             <div>
-                               <i class="fa-regular fa-calendar-check blue1_color"></i>
+                                <i class="fa-regular fa-calendar-check blue1_color"></i>
                             </div>
                         </div>
                         <div class="counter_no">
                             <div>
-                                <p class="total_no" style="color: black">10</p>
+                                <p class="total_no" style="color: black">{{ t_book }}</p>
                                 <p class="head_couter" style="color: black">Table Bookings</p>
                             </div>
                         </div>
@@ -101,7 +109,7 @@
                         </div>
                         <div class="counter_no">
                             <div>
-                                <p class="total_no" style="color: black">54</p>
+                                <p class="total_no" style="color: black">{{ s_message }}</p>
                                 <p class="head_couter" style="color: black">Messages</p>
                             </div>
                         </div>
@@ -109,107 +117,82 @@
                 </div>
             </div>
             <div class="row column1 social_media_section">
-                <div class="col-md-6 col-lg-3">
-                    <div class="full socile_icons fb margin_bottom_30">
-                        <div class="social_icon">
-                            <i class="fa fa-facebook"></i>
-                        </div>
-                        <div class="social_cont">
-                            <ul>
-                                <li>
-                                    <span><strong>35k</strong></span>
-                                    <span>Friends</span>
-                                </li>
-                                <li>
-                                    <span><strong>128</strong></span>
-                                    <span>Feeds</span>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-6 col-lg-3">
-                    <div class="full socile_icons tw margin_bottom_30">
-                        <div class="social_icon">
-                            <i class="fa fa-twitter"></i>
-                        </div>
-                        <div class="social_cont">
-                            <ul>
-                                <li>
-                                    <span><strong>584k</strong></span>
-                                    <span>Followers</span>
-                                </li>
-                                <li>
-                                    <span><strong>978</strong></span>
-                                    <span>Tweets</span>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-6 col-lg-3">
-                    <div class="full socile_icons linked margin_bottom_30">
-                        <div class="social_icon">
-                            <i class="fa fa-linkedin"></i>
-                        </div>
-                        <div class="social_cont">
-                            <ul>
-                                <li>
-                                    <span><strong>758+</strong></span>
-                                    <span>Contacts</span>
-                                </li>
-                                <li>
-                                    <span><strong>365</strong></span>
-                                    <span>Feeds</span>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-6 col-lg-3">
-                    <div class="full socile_icons google_p margin_bottom_30">
-                        <div class="social_icon">
-                            <i class="fa fa-google-plus"></i>
-                        </div>
-                        <div class="social_cont">
-                            <ul>
-                                <li>
-                                    <span><strong>450</strong></span>
-                                    <span>Followers</span>
-                                </li>
-                                <li>
-                                    <span><strong>57</strong></span>
-                                    <span>Circles</span>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- graph -->
-            <div class="row column2 graph margin_bottom_30">
-                <div class="col-md-l2 col-lg-12">
-                    <div class="white_shd full">
-                        <div class="full graph_head">
-                            <div class="heading1 margin_0">
-                                <h2>Extra Area Chart</h2>
+                    <div class="col-md-6 col-lg-3">
+                        <div class="full socile_icons fb margin_bottom_30">
+                            <div class="social_icon">
+                                <i class="fa-brands fa-facebook"></i>
+
+                            </div>
+                            <div class="social_cont">
+                                <ul>
+                                    <li>
+                                        <span><strong>35k</strong></span>
+                                        <span>Followers</span>
+                                    </li>
+                                    <li>
+                                        <span><strong>128</strong></span>
+                                        <span>Feeds</span>
+                                    </li>
+                                </ul>
                             </div>
                         </div>
-                        <div class="full graph_revenue">
-                            <div class="row">
-                                <div class="col-md-12">
-                                    <div class="content">
-                                        <div class="area_chart">
-                                            <canvas height="120" id="canvas"></canvas>
-                                        </div>
-                                    </div>
-                                </div>
+                    </div>
+                    <div class="col-md-6 col-lg-3">
+                        <div class="full socile_icons tw margin_bottom_30">
+                            <div class="social_icon">
+                                <i class="fa-brands fa-tiktok"></i>
+                            </div>
+                            <div class="social_cont">
+                                <ul>
+                                    <li>
+                                        <span><strong>584k</strong></span>
+                                        <span>Followers</span>
+                                    </li>
+                                    <li>
+                                        <span><strong>978</strong></span>
+                                        <span>Posts</span>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-3">
+                        <div class="full socile_icons linked margin_bottom_30">
+                            <div class="social_icon">
+                                <i class="fa-brands fa-instagram"></i>
+                            </div>
+                            <div class="social_cont">
+                                <ul>
+                                    <li>
+                                        <span><strong>758+</strong></span>
+                                        <span>Followers</span>
+                                    </li>
+                                    <li>
+                                        <span><strong>365</strong></span>
+                                        <span>Posts</span>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-3">
+                        <div class="full socile_icons google_p margin_bottom_30">
+                            <div class="social_icon">
+                                <i class="fa-brands fa-whatsapp"></i>
+                            </div>
+                            <div class="social_cont">
+                                <ul>
+                                    <li>
+                                        <span><strong>450</strong></span>
+                                        <span>Messages</span>
+                                    </li>
+
+                                </ul>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <!-- end graph -->
+
             <div class="row column3">
                 <!-- testimonial -->
                 <div class="col-md-6">
@@ -227,30 +210,16 @@
                                              data-ride="carousel">
                                             <!-- Wrapper for carousel items -->
                                             <div class="carousel-inner">
-                                                <div class="item carousel-item active">
-                                                    <div class="img-box"><img
-                                                            src="images/layout_img/user_img.jpg" alt=""></div>
-                                                    <p class="testimonial">Sed ut perspiciatis unde omnis iste
-                                                        natus error sit voluptatem accusantium doloremque
-                                                        laudantium, totam rem aperiam, eaque ipsa quae..</p>
-                                                    <p class="overview"><b>Michael Stuart</b>Seo Founder</p>
-                                                </div>
-                                                <div class="item carousel-item">
-                                                    <div class="img-box"><img
-                                                            src="images/layout_img/user_img.jpg" alt=""></div>
-                                                    <p class="testimonial">Sed ut perspiciatis unde omnis iste
-                                                        natus error sit voluptatem accusantium doloremque
-                                                        laudantium, totam rem aperiam, eaque ipsa quae..</p>
-                                                    <p class="overview"><b>Michael Stuart</b>Seo Founder</p>
-                                                </div>
-                                                <div class="item carousel-item">
-                                                    <div class="img-box"><img
-                                                            src="images/layout_img/user_img.jpg" alt=""></div>
-                                                    <p class="testimonial">Sed ut perspiciatis unde omnis iste
-                                                        natus error sit voluptatem accusantium doloremque
-                                                        laudantium, totam rem aperiam, eaque ipsa quae..</p>
-                                                    <p class="overview"><b>Michael Stuart</b>Seo Founder</p>
-                                                </div>
+                                                {% for tes in testi %}
+                                                    <div class="item carousel-item {% if forloop.first %} active {% endif %}">
+                                                        <div class="img-box"><img
+                                                                src="/media/{{ tes.image }}" alt="">
+                                                        </div>
+                                                        <p class="testimonial">{{ tes.testimony }}</p>
+                                                        <p class="overview"><b>{{ tes.name }}</b>{{ tes.position }}</p>
+                                                    </div>
+                                                {% endfor %}
+
                                             </div>
                                             <!-- Carousel controls -->
                                             <a class="carousel-control left carousel-control-prev"
@@ -282,7 +251,7 @@
                                 <div class="col-md-12">
                                     <div class="progress_bar">
                                         <!-- Skill Bars -->
-                                        <span class="skill" style="width:73%;">Facebook <span
+                                        <span class="skill" style="width:73%;">Wedding Party <span
                                                 class="info_valume">73%</span></span>
                                         <div class="progress skill-bar ">
                                             <div class="progress-bar progress-bar-animated progress-bar-striped"
@@ -290,7 +259,7 @@
                                                  aria-valuemax="100" style="width: 73%;">
                                             </div>
                                         </div>
-                                        <span class="skill" style="width:62%;">Twitter <span
+                                        <span class="skill" style="width:62%;">Birthday Party <span
                                                 class="info_valume">62%</span></span>
                                         <div class="progress skill-bar">
                                             <div class="progress-bar progress-bar-animated progress-bar-striped"
@@ -298,7 +267,7 @@
                                                  aria-valuemax="100" style="width: 62%;">
                                             </div>
                                         </div>
-                                        <span class="skill" style="width:54%;">Instagram <span
+                                        <span class="skill" style="width:54%;">Conference <span
                                                 class="info_valume">54%</span></span>
                                         <div class="progress skill-bar">
                                             <div class="progress-bar progress-bar-animated progress-bar-striped"
@@ -306,7 +275,7 @@
                                                  aria-valuemax="100" style="width: 54%;">
                                             </div>
                                         </div>
-                                        <span class="skill" style="width:82%;">Google plus <span
+                                        <span class="skill" style="width:82%;">Accomodation <span
                                                 class="info_valume">82%</span></span>
                                         <div class="progress skill-bar">
                                             <div class="progress-bar progress-bar-animated progress-bar-striped"
@@ -314,7 +283,7 @@
                                                  aria-valuemax="100" style="width: 82%;">
                                             </div>
                                         </div>
-                                        <span class="skill" style="width:48%;">Other <span
+                                        <span class="skill" style="width:48%;">Private Meetings <span
                                                 class="info_valume">48%</span></span>
                                         <div class="progress skill-bar">
                                             <div class="progress-bar progress-bar-animated progress-bar-striped"
