--- a/admin_dashboard/templates/dashboard1/layout.html
+++ b/admin_dashboard/templates/dashboard1/layout.html
@@ -118,7 +118,7 @@
                                 class="fa fa-dashboard yellow_color"></i> <span>Home</span></a>
                         <ul class="collapse list-unstyled" id="dashboard" style="background-color: #0ea432">
                             <li>
-                                <a href="/admin_board"> <span>Home</span></a>
+                                <a href="{% url 'admin_board' %}"> <span>Home</span></a>
                             </li>
 
                         </ul>
@@ -180,9 +180,9 @@
                                                 src="{% static 'images/layout_img/user_img.jpg' %}" alt="#"/><span
                                                 class="name_user">John David</span></a>
                                         <div class="dropdown-menu">
-                                            <a class="dropdown-item" href="/profile">My Profile</a>
-                                            <a class="dropdown-item" href="/settings">Settings</a>
-                                            <a class="dropdown-item" href="/logout_user"><span>Log Out</span> <i
+                                            <a class="dropdown-item" href="{% url 'profile' %}">My Profile</a>
+                                            <a class="dropdown-item" href="{% url 'settings' %}">Settings</a>
+                                            <a class="dropdown-item" href="{% url 'logout_user' %}"><span>Log Out</span> <i
                                                     class="fa fa-sign-out"></i></a>
                                         </div>
                                     </li>
