--- a/admin_dashboard/templates/dashboard1/layout.html
+++ b/admin_dashboard/templates/dashboard1/layout.html
@@ -123,7 +123,7 @@
 
                         </ul>
                     </li>
-                    <li><a href="widgets.html"><i class="fa fa-person"></i> <span>Staffs</span></a></li>
+                    <li><a href="{% url 'staffs' %}"><i class="fa fa-person"></i> <span>Staffs</span></a></li>
                     <li>
                         <a href="#element" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle"><i
                                 class="fa fa-diamond purple_color"></i> <span>Menu Categories</span></a>
