--- a/admin_dashboard/templates/dashboard1/staff.html
+++ b/admin_dashboard/templates/dashboard1/staff.html
@@ -1,6 +1,11 @@
 {% extends 'dashboard1/layout.html' %}
 {% load static %}
 {% block body %}
+    <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+
     <div class="midde_cont">
         <div class="container-fluid">
             <div class="row column_title">
@@ -12,8 +17,20 @@
             </div>
             <!-- row -->
             <div class="row column1">
+                <a href="" style="text-decoration: none; color: inherit;">
+                    <div class="col-md-3">
+                        <div class="card text-center shadow-sm p-3 mb-4 rounded" style="cursor: pointer;">
+                            <div class="card-body">
+                                <div class="display-4 text-primary">
+                                    <i class="fa fa-plus"></i>
+                                </div>
+                                <p class="mt-3 mb-0 fw-bold">Add New Staff</p>
+                            </div>
+                        </div>
+                    </div>
 
-     
+                </a>
+
                 {% for st in staf %}
                     <div class="col-md-6 col-lg-4">
                         <div class="full white_shd margin_bottom_30">
@@ -29,7 +46,6 @@
                         </div>
                     </div>
                 {% endfor %}
-
 
             </div>
             <!-- end row -->
