table booking edits

--- a/admin_dashboard/templates/dashboard1/tablebooking.html
+++ b/admin_dashboard/templates/dashboard1/tablebooking.html
@@ -63,7 +63,7 @@
                                 <td>
 
                                     <span>
-                                <i class="bi bi-eye-fill text-primary cursor-pointer" data-bs-toggle="modal"
+                                <i class="bi bi-eye-fill text-primary cursor-pointer" data-id="{{ tab.id }}"  data-bs-toggle="modal"
                                    data-bs-target="#viewModal"></i>
                                 </span>
 
@@ -159,6 +159,10 @@
             </div>
         </div>
     </div>
+
+    <script>
+
+    </script>
 
 
 {% endblock %}
